--- a/requirements.txt
+++ b/requirements.txt
@@ -4,37 +4,67 @@ anyio==3.6.1
 async-timeout==4.0.2
 asyncio==3.4.3
 attrs==21.4.0
+Automat==20.2.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
+constantly==15.1.0
+crochet==2.0.0
+cryptography==37.0.2
 cssselect==1.1.0
 Deprecated==1.2.13
 fake-headers==1.0.2
 fastapi==0.78.0
+filelock==3.7.1
 frozenlist==1.3.0
 h11==0.13.0
+h2==3.2.0
+hpack==3.0.0
 html5lib==1.1
+hyperframe==5.2.0
+hyperlink==21.0.0
 idna==3.3
+incremental==21.3.0
+itemadapter==0.6.0
+itemloaders==1.0.4
+jmespath==1.0.1
 loguru==0.6.0
 lxml==4.9.1
 multidict==6.0.2
 packaging==21.3
+parsel==1.6.0
+priority==1.3.0
+Protego==0.2.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
 pydantic==1.9.1
+PyDispatcher==2.0.5
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 pyquery==1.4.3
 PyYAML==6.0
+queuelib==1.6.2
 redis==4.3.4
 requests==2.28.1
+requests-file==1.5.1
 retrying==1.3.3
+Scrapy==2.5.1
+service-identity==21.1.0
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
 starlette==0.19.1
+tldextract==3.3.0
+Twisted==22.4.0
 typing_extensions==4.3.0
 urllib3==1.26.9
 uvicorn==0.18.2
+w3lib==1.22.0
 webencodings==0.5.1
 wrapt==1.14.1
 yarl==1.7.2
+zope.interface==5.4.0
